# RETrend

./: .gitignore  AGENTS.md  README.md  commands.md  output_korean.txt  test.md
.sisyphus/drafts/: retrend-platform-skeleton.md
.sisyphus/plans/: cluster-bootstrap-ingress-docs.md
00_infra/: README.md
00_infra/metallb/: address-pool.yaml
01_ingestion/: README.md  pyrightconfig.json
01_ingestion/jobs/: kreb_daily_sync.py
01_ingestion/src/kreb/: pyproject.toml
01_ingestion/src/kreb/src/kreb_etl_v2/: backfill.py
01_ingestion/src/kreb/tests/: test_backfill_v2_state.py
dags/: kreb_bronze_to_iceberg_backfill.py  kreb_daily_sync_daily.py  kreb_daily_sync_to_iceberg_incremental_daily.py  retrend_crawler_dag.py  retrend_crawler_with_quota_dag.py
docker/: README.md
docs/: infra_overview.md  platform_runbook.md  project_midterm_review.md  runbook_kreb_backfill.md
history/: AGENTS.md
infra/: README.md
jobs/: README.md
sample/: depth1_shido_curl.sh  depth1_shido_response.json  depth2_shigungu_response.json  depth3_eupmeandong_curl.sh  depth3_eupmeandong_response.json  depth4_complex_response.json  depth5_pyeonginfo_curl.sh  depth5_pyeonginfo_response.json  depth6_prices_page1_curl.sh  depth6_prices_page1_response.json  depth6_prices_page2_response.json  아파트 매매 실거래가 상세자료 기술문서.doc
sql/: README.md
src/: extract_complexes_to_csv.py  extract_eupmeandong_to_csv.py  extract_pyeonginfo_single.py  extract_pyeonginfo_to_csv.py  extract_pyeonginfo_to_csv_s3.py  extract_shido_to_excel.py  extract_shigungu_to_csv.py  extract_trade_history.py
(+150 files in other folders)
